chore: add TODO for responsiveness

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
 </head>
+<!--TODO: adding responsivness to the markup -->
 <body>
     <header id="header" class="brand">ALI B.</header>
     <div id="app-name">RPG Creature Search App</div>
