--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header id="header" class="brand">ALI B.</header>
+    <header id="header" class="brand">ALI Babamahmoudi</header>
     <div id="app-name">RPG Creature Search App</div>
     <main>
         <div id="container">
