conflict: edit .brand header text to create merge conflict

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <!--TODO: adding responsivness to the markup -->
 <body>
-    <header id="header" class="brand">ALI B.</header>
+    <header id="header" class="brand">ALI B inc.</header>
     <div id="app-name">RPG Creature Search App</div>
     <main>
         <div id="container">
